# cratery

./: .taplo.toml  Cargo.toml
.github/workflows/: ci.yml
src/: application.rs  main.rs  routes.rs  worker.rs
src/migrations/: mod.rs
src/model/: auth.rs  cargo.rs  config.rs  deps.rs  docs.rs  errors.rs  mod.rs  namegen.rs  osv.rs  packages.rs  stats.rs  worker.rs
src/services/: deps.rs  docs.rs  emails.rs  mod.rs  rustsec.rs  storage.rs
src/services/database/: admin.rs  jobs.rs  mod.rs  packages.rs  stats.rs  users.rs
src/services/index/: git.rs  mod.rs
src/tests/: mocks.rs  mod.rs
src/utils/: apierror.rs  concurrent.rs  db.rs  hashes.rs  mod.rs  shared.rs  sigterm.rs  token.rs
src/utils/axum/: auth.rs  embedded.rs  extractors.rs  mod.rs  sse.rs
src/webapp/: mod.rs
