[package]
name = "cratery"
version = "1.12.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Cratery -- a private cargo registry"
repository = "https://github.com/cenotelie/cratery"
homepage = "https://github.com/cenotelie/cratery"
documentation = "https://github.com/cenotelie/cratery"
license = "MIT"
edition = "2024"

[dependencies]
# logging
log = "0.4"
fern = "0.7"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# basic dependencies
base64 = "0.22"
byteorder = "1.4"
bytes = "1.7"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = { version = "0.18", features = ["secure", "percent-encode"] }
data-encoding = "2.1"
flate2 = "1.0"
http-body = "1"
mime = "0.3"
opendal = { version = "0.53", features = ["services-fs", "services-s3"] }
quick-xml = "0.37"
rand = "0.8"
ring = "0.17"
semver = { version = "1.0", features = ["serde"] }
urlencoding = "2.1"
tar = "0.4.41"
uuid = { version = "1.2", features = ["v4", "fast-rng"] }

# async support
futures = "0.3"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7", features = ["io"] }

# framework for the application
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "rustls-tls",
    "tokio1",
    "tokio1-rustls-tls",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
] }
axum = { version = "0.8", features = ["http2", "ws"] }
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
tokio-tungstenite = "0.26"

[lints.rust]
# missing_docs = "deny"
unused_imports = "deny"

[lints.clippy]
cargo = { priority = -1, level = "warn" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
bind_instead_of_map = "deny"
type_repetition_in_bounds = "deny"
borrowed_box = "deny"
cast_lossless = "deny"
cast_possible_wrap = "deny"
checked_conversions = "deny"
clone_on_copy = "deny"
derive_partial_eq_without_eq = "deny"
doc_markdown = "deny"
explicit_deref_methods = "deny"
extra_unused_lifetimes = "deny"
if_not_else = "deny"
manual_assert = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
missing_const_for_fn = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_pass_by_value = "deny"
nonminimal_bool = "deny"
or_fun_call = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
string_lit_as_bytes = "deny"
trivially_copy_pass_by_ref = "deny"
type-repetition-in-bounds = "deny"
uninlined_format_args = "deny"
unreadable_literal = "deny"
use_self = "deny"
useless_conversion = "deny"
